--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- REGLA 2: Utilizar Font Awesome para añadir un icono de página -->
     <link rel="icon" href="resources/css-brands-solid-full.svg" type="image/svg+xml">
